# dit_mc

./: .gitignore  README.md  pyproject.toml  setup.py
configs/: config.yaml
configs/data_loader/: geom_drugs.yaml  geom_qm9.yaml
configs/generative_process/: flow_matching.yaml
configs/model/: dit_ape.yaml  dit_rpe.yaml  dit_so3.yaml
configs/prior/: gaussian.yaml  harmonic.yaml
dit_mc/: algos.pyx  app.py  evaluate.py  generate_confs.py  prepare_dataset.py
dit_mc/backbones/: base.py  embedding.py  encoder.py  forward_model.py  generative_model.py  merger.py  neural_network_layer.py  readout.py  utils.py
dit_mc/data_loader/: base.py  geom_dataset.py  utils.py
dit_mc/generative_process/: base.py  flow_matching.py  priors.py
dit_mc/model_zoo/: GeomDiT.py  __init__.py  mesh_graph_net.py
dit_mc/training/: checkpoint.py  ema_tracker.py  pf_buffer.py  trainer.py  utils.py
tf_datasets/geom/: README.md  TAGS.txt  build_ds.sh  geom_dataset_builder.py  preprocessing.py
